--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mongoose": "^6.9.0",
     "nodemailer": "^6.9.1",
     "slugify": "^1.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
